# MachineLearningModel_Deployment

./: LICENSE  README.md  pyproject.toml
.gradio/flagged/: dataset1.csv  dataset2.csv
deployments/: gradio_app.py  streamlit_app.py
deployments/fastapi/: fastapi_app.py
deployments/fastapi/static/: style.css
deployments/fastapi/templates/: index.html
deployments/flask/: flask_app.py
deployments/flask/static/: style.css
deployments/flask/templates/: index.html
research/: model.ipynb
src/: train_model.py  utils.py
src/machinelearningmodel_deployment.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
