[project]
name = "machinelearningmodel-deployment"
version = "1.0.0"
description = "Mchine Learning Model Deployment with FastAPI, Flask, Gradio, and Streamlit"
authors = [
    { name = "Chandan Kumar", email = "chaudhari.chandan22@gmail.com"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.0.0",
    "chandan-aiops>=1.5.3",
    "fastapi>=0.129.0",
    "flaml[automl]>=2.5.0",
    "flask>=3.1.2",
    "gradio>=6.5.1",
    "imblearn>=0.0",
    "ipykernel>=7.2.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pydentic>=0.0.1.dev3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "streamlit>=1.19.0",
    "uvicorn>=0.40.0",
    "vega-datasets>=0.9.0",
]
